[Bugfix]: Fixed Dark Mode for GitHub Calendar. | Fixed Book Name for Currently Reading

--- a/user/themes/developer-me/assets/plugins/github-calendar/css/github-calendar.css
+++ b/user/themes/developer-me/assets/plugins/github-calendar/css/github-calendar.css
@@ -4,6 +4,7 @@
   --color-calendar-graph-day-L2-bg: #45a045;
   --color-calendar-graph-day-L3-bg: #047526;
   --color-calendar-graph-day-L4-bg: #0a4208;
+  --color-calendar-graph-day-bg-dark: #161b22;
 }
 
 rect.ContributionCalendar-day[data-level='0'] {
@@ -224,7 +225,6 @@ td.ContributionCalendar-day {
     border: 3px solid #fff;
     border-radius: 3px;
     min-width: 10px;
-
 }
 
 td.ContributionCalendar-day[data-level='0'] {
@@ -246,3 +246,15 @@ td.ContributionCalendar-day[data-level='3'] {
 td.ContributionCalendar-day[data-level='4'] {
     background-color: var(--color-calendar-graph-day-L4-bg);
 }
+
+/* Dark Mode */
+body[data-theme="dark"] td.ContributionCalendar-day {
+    border: 3px solid rgba(27, 31, 35);
+    border-radius: 3px;
+    min-width: 10px;
+}
+
+body[data-theme="dark"] td.ContributionCalendar-day[data-level='0'] {
+    background-color: var(--color-calendar-graph-day-bg-dark);
+}
+
